--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "LLM Interceptor for Local Web Searches",
+  "name": "llm-local-web-search",
   "version": "0.1",
+  "summary": "Firefox extension that adds client-side tool calling for local LLMs",
   "description": "Firefox extension that adds client-side web search for local LLMs. Intercepts OpenAI-compatible API calls, injects a web_search tool call, and fetches results directly in your browser. See what is going on, solve captchas yourself, bypass server-side fetch errors, works offline with llama.cpp",
   "permissions": ["http://*/*", "https://*/*", "storage", "tabs"],
   "browser_action": {
