--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,10 +2,13 @@ name: Publish to AMO
 on:
   workflow_dispatch:
     inputs:
-      version:
-        description: "Version to release (e.g. 1.2.3)"
+      bump:
+        description: "Version bump"
         required: true
-
+        type: choice
+        options:
+          - minor
+          - major
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -13,7 +16,6 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v5
-
       - uses: pnpm/action-setup@v4
         with:
           version: 10
@@ -21,27 +23,31 @@ jobs:
         with:
           node-version: "lts/*"
           cache: "pnpm"
-
       - run: pnpm install --frozen-lockfile
-
-      - name: Update version
+      - name: Bump version
+        id: version
         run: |
-          jq --arg v "${{ inputs.version }}" '.version = $v' package.json > tmp && mv tmp package.json
-          jq --arg v "${{ inputs.version }}" '.version = $v' src/manifest.json > tmp && mv tmp src/manifest.json
-
+          CURRENT=$(jq -r '.version' package.json)
+          IFS='.' read -r MAJOR MINOR <<< "$CURRENT"
+          if [ "${{ inputs.bump }}" = "major" ]; then
+            NEW="$((MAJOR + 1)).0"
+          else
+            NEW="${MAJOR}.$((MINOR + 1))"
+          fi
+          echo "version=$NEW" >> $GITHUB_OUTPUT
+          jq --arg v "$NEW" '.version = $v' package.json > tmp && mv tmp package.json
+          jq --arg v "$NEW" '.version = $v' src/manifest.json > tmp && mv tmp src/manifest.json
       - run: pnpm lint
-
       - name: Commit, tag, and push
         run: |
           git config user.name 'github-actions'
           git config user.email 'github-actions@github.com'
           git add package.json src/manifest.json
-          git commit -m "Release v${{ inputs.version }}"
-          git tag "${{ inputs.version }}"
+          git commit -m "Release v${{ steps.version.outputs.version }}"
+          git tag "v${{ steps.version.outputs.version }}"
           git push && git push --tags
-
       - name: Publish to AMO
-        run: npx web-ext sign --source-dir ./src --channel listed
+        run: pnpm web-ext sign --source-dir ./src --channel listed
         env:
           WEB_EXT_API_KEY: ${{ secrets.AMO_API_KEY }}
           WEB_EXT_API_SECRET: ${{ secrets.AMO_API_SECRET }}
