--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,10 +1,14 @@
 {
   "manifest_version": 2,
   "name": "llm-local-web-search",
-  "version": "0.2",
-  "summary": "Firefox extension that adds client-side tool calling for local LLMs",
+  "version": "0.4",
   "description": "Firefox extension that adds client-side web search for local LLMs. Intercepts OpenAI-compatible API calls, injects a web_search tool call, and fetches results directly in your browser. See what is going on, solve captchas yourself, bypass server-side fetch errors, works offline with llama.cpp",
-  "permissions": ["http://*/*", "https://*/*", "storage", "tabs"],
+  "permissions": [
+    "http://*/*",
+    "https://*/*",
+    "storage",
+    "tabs"
+  ],
   "browser_action": {
     "default_icon": "icon.svg",
     "default_title": "LLM Search"
@@ -15,30 +19,54 @@
   },
   "content_scripts": [
     {
-      "matches": ["http://*/*", "https://*/*"],
-      "js": ["content.js"],
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "js": [
+        "content.js"
+      ],
       "run_at": "document_start"
     },
     {
-      "matches": ["https://duckduckgo.com/*"],
-      "js": ["duckduckgo.js"],
+      "matches": [
+        "https://duckduckgo.com/*"
+      ],
+      "js": [
+        "duckduckgo.js"
+      ],
       "run_at": "document_idle"
     },
     {
-      "matches": ["http://*/*", "https://*/*"],
-      "js": ["Readability.js", "extractor.js"],
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "js": [
+        "Readability.js",
+        "extractor.js"
+      ],
       "run_at": "document_idle"
     }
   ],
-  "web_accessible_resources": ["injected.js", "tools.json", "sidebar.html"],
+  "web_accessible_resources": [
+    "injected.js",
+    "tools.json",
+    "sidebar.html"
+  ],
   "background": {
-    "scripts": ["config.js", "background.js"]
+    "scripts": [
+      "config.js",
+      "background.js"
+    ]
   },
   "browser_specific_settings": {
     "gecko": {
       "id": "llm-search@local",
       "data_collection_permissions": {
-        "required": ["none"]
+        "required": [
+          "none"
+        ]
       }
     }
   },
