feat: add user instructions, auto-save settings, improve tool handling
- Add textarea in sidebar for additional instructions to LLM
- Auto-save settings with debounce, remove save button
- Add "Saved" indicator to options page
- Remove autoClose/extractTimeout settings (always manual submit)
- Fetch fresh settings before each search
- Add blinking animation to active icon (SMIL)
- Fix: keep tools definition in follow-up requests
- Fix: timeout fallback returns correct object structure
- Rename forceSubmit → submit
- Merge submitToLLM into submit function

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,14 +1,6 @@
 name: Publish to AMO
 on:
   workflow_dispatch:
-    inputs:
-      bump:
-        description: "Version bump"
-        required: true
-        type: choice
-        options:
-          - minor
-          - major
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -27,7 +19,7 @@ jobs:
       - name: Bump version
         id: version
         run: |
-          NEW=$(bash ./version-bump.sh ${{ inputs.bump }})
+          NEW=$(bash ./version-bump.sh minor)
           echo "version=$NEW" >> $GITHUB_OUTPUT
       - run: pnpm lint
       - name: Commit, tag, and push
